# ROPTLIB

./: CMakeLists.txt
Problems/estimateRotation/: estimaterotation.cpp  estimaterotation.h
Problems/estimateRotation_Temporal/: estimaterotationtemporal.cpp  estimaterotationtemporal.h
cwrapper/blas/: f2c.h
test/: test1.cpp
